--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.tsx",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc",
     "preview": "vite preview"
   },
   "dependencies": {
