wip: bug vercel

--- a/vercel.json
+++ b/vercel.json
@@ -2,29 +2,28 @@
     "version": 2,
     "builds": [
       {
-        "src": "*.html",
-        "use": "@vercel/static"
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "dist"
+        }
       }
     ],
     "headers": [
       {
-        "source": "/src/(.*.(js|jsx|ts|tsx|css|json))",
+        "source": "/assets/(.*)",
         "headers": [
           {
-            "key": "Content-Type",
-            "value": "application/javascript"
-          },
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "*"
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000, immutable"
           }
         ]
       }
     ],
-    "routes": [
+    "rewrites": [
       {
-        "src": "/(.*)",
-        "dest": "/index.html"
+        "source": "/(.*)",
+        "destination": "/index.html"
       }
     ]
   }
