--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "poker-ai",
   "version": "1.0.0",
   "description": "Poker AI Assistant with React",
+  "type": "module",
   "main": "index.tsx",
   "scripts": {
     "dev": "vite",
